# tiny-os

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  boot.s  context.s  fork.cpp  handler.cpp  linker.ld  memory.cpp  scheduler.cpp  shell.cpp  start.cpp  switch_context.s  sys.cpp  thread.cpp  utils.cpp  utils.s  vector.s
.github/workflows/: tiny-os.yml
devices/: CMakeLists.txt
devices/interrupts/: CMakeLists.txt  system_timer.cpp  uart.cpp
devices/system_timer/: CMakeLists.txt  system_timer.cpp
devices/uart/: CMakeLists.txt  transfer.cpp  uart.cpp
elf/: CMakeLists.txt  loader.cpp
include/: asm.h  fork.hpp  memory.hpp  scheduler.hpp  shell.hpp  sys.hpp  thread.hpp
include/cpu/: cpu.hpp
include/devices/interrupts/: system_timer.hpp  uart.hpp
include/devices/mmio/: mmio.hpp
include/devices/register/: regs.hpp
include/devices/system_timer/: system_timer.hpp
include/devices/uart/: transfer.hpp  uart.hpp
include/elf/: loader.hpp
include/interrupts/: uart.hpp
include/lib/: str.h
include/mmio/: mmio.hpp
include/register/: regs.hpp
include/sys/: fork.hpp  sys.h  uart.hpp
include/uart/: uart.hpp
interrupts/: uart.cpp
lib/str/: CMakeLists.txt  str.c
sys/: CMakeLists.txt  fork.cpp  fork.s  uart.cpp  uart.s
tests/: CMakeLists.txt  main.cpp  scheduler.cpp  stub.cpp
tests/cpputest/lib/pkgconfig/: cpputest.pc
tests/elf/: CMakeLists.txt  loader.cpp  sample.elf
tests/lib/: CMakeLists.txt
tests/lib/str/: CMakeLists.txt  str.cpp
uart/: uart.cpp
usr/: CMakeLists.txt  sample.cpp  sample_app1.cpp  sample_app2.cpp
